[package]
name = "energise"
version = "0.3.1"
authors = ["dariusjs"]
edition = "2018"

[lib]
name = "dsmrlib"
path = "src/dsmrlib/dsmrlib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4", features= ["serde"] }
serialport = "^3.3.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.60"
tokio = { version = "^1.0", features = ["full", "tracing"] }
reqwest = "^0.11"
influx_db_client = "^0.5"
openssl = { version = "0.10", features = ["vendored"] }
eyre = "^0.6.8"
env_logger = "^0.10.0"
log = "^0.4"